[package]
name = "crypto-gain-loss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blockfrost = "1.0.1"
chrono = "0.4.31"
dotenv = "0.15.0"
rusqlite = "0.30.0"
tokio = { version = "1.35.1", features = ["full"] }
