[package]
name = "crypto-gain-loss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blockfrost = "1.0.1"
chrono = "0.4.31"
color-eyre = "0.6.2"
dotenv = "0.15.0"
reqwest = "0.11.23"
rusqlite = "0.30.0"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
